platform/live-lab/manifests/app/patches/patch-ingress-live-lab.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-pipeline-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: __ALB_CERTIFICATE_ARN__
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/inbound-cidrs: __OPERATOR_CIDR__
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=false,idle_timeout.timeout_seconds=60
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/tags: Project=kyobo-platform-live-lab,Session=__SESSION_ID__,Approval=__APPROVAL_ID__,ManagedBy=terraform
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
spec:
  ingressClassName: alb
